network_policy/deny-all-for-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {} # apply to all
  policyTypes:
    - Ingress
    - Egress
