network_policy/egress-allow-all-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
spec:
  podSelector:
    matchLabels:
      name: my_pod # apply only to my_pod
  egress:
    - {}
  policyTypes:
    - Egress
