network_policy/ingress-egress.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal # apply to internal pod
  policyTypes:
    - Egress
    - Ingress
  ingress:  # allow all ingress traffic (because its empty )
    - {}
  egress: # allow egress traffic to     mysql pod and 3306   OR   payroll pod and port 8080    OR    port 54
    - to:
        - podSelector:
            matchLabels:
              name: mysql
      ports:
        - protocol: TCP
          port: 3306

    - to:
        - podSelector:
            matchLabels:
              name: payroll
      ports:
        - protocol: TCP
          port: 8080

    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
