network_policy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector:
    matchLabels:
      name: my_pod # apply only to my_pod
  ingress:
    - {}   # if empty allow all
  policyTypes:
    - Ingress
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
spec:
  podSelector:
    matchLabels:
      name: my_pod # apply only to my_pod
  policyTypes:
    - Ingress

  #ingress:  < - WITHOUT INGRESS, DENY ALL
  #  - { }   < - WITHOUT INGRESS, DENY ALL
  #


---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payroll-policy
  namespace: default
spec:
  ingress:     # allow ingress trafik only from internal pod AND port 8080
    - from:
        - podSelector:
            matchLabels:
              name: internal
      ports:
        - port: 8080
          protocol: TCP
    #- .....
    #- .....
    #- .....
  podSelector:
    matchLabels:
      name: payroll  # apply Policy to  payroll pod
  policyTypes:
    - Ingress       #ingress type

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-ingress
  namespace: namespace-ui
spec:
  podSelector: {} # apply to all pod IN  (IMPORTANT) namespace-ui namespace
  policyTypes:
    - Ingress
  ingress:
    - from:               # alloy ingress traffic only from  namespace-web  namespace
        - namespaceSelector:
            matchExpressions:
              - key: namespace
                operator: In
                values:
                  - namespace-web
